[gd_scene load_steps=11 format=3 uid="uid://bcpkncscdhpy2"]

[ext_resource type="Script" uid="uid://lhh4h8fefcd7" path="res://scripts/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://fihnr8bb0h7s" path="res://scripts/interactHost.gd" id="2_onrkg"]
[ext_resource type="Script" uid="uid://dnx4dm2cnxymk" path="res://scripts/invHost.gd" id="3_hqtel"]
[ext_resource type="PackedScene" uid="uid://bewt81mkhh7yx" path="res://inv_slot.tscn" id="3_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]
radius = 0.4

[sub_resource type="LabelSettings" id="LabelSettings_onrkg"]
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_i3pqv"]
size = Vector3(10, 10, 1)

[sub_resource type="Curve" id="Curve_onrkg"]
_data = [Vector2(0.514468, 0), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_i3pqv"]
curve = SubResource("Curve_onrkg")

[sub_resource type="BoxMesh" id="BoxMesh_onrkg"]
size = Vector3(4, 4, 1)

[node name="CharacterBody3D" type="CharacterBody3D"]
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sh265")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="RightHand" type="Node3D" parent="Camera3D"]
transform = Transform3D(9.55343e-16, -0.5, 4.37114e-08, -0.5, 9.55343e-16, 2.18557e-08, -2.18557e-08, -4.37114e-08, -0.5, 0.2, -0.1, -0.2)

[node name="LeftHand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.204204, -1.39027)

[node name="InteractHost" type="Node2D" parent="."]
script = ExtResource("2_onrkg")
metadata/_custom_type_script = "uid://fihnr8bb0h7s"

[node name="OptionText" type="Label" parent="InteractHost"]
offset_left = -200.0
offset_top = -215.0
offset_right = 200.0
offset_bottom = -15.0
label_settings = SubResource("LabelSettings_onrkg")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MeshInstance2D2" type="MeshInstance2D" parent="InteractHost"]
mesh = SubResource("BoxMesh_i3pqv")
texture = SubResource("CurveTexture_i3pqv")

[node name="MeshInstance2D" type="MeshInstance2D" parent="InteractHost"]
mesh = SubResource("BoxMesh_onrkg")

[node name="DescriptionText" type="Label" parent="InteractHost"]
offset_left = -200.0
offset_top = 15.0
offset_right = 200.0
offset_bottom = 215.0
label_settings = SubResource("LabelSettings_onrkg")
horizontal_alignment = 1

[node name="InvBG" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.91
anchor_right = 0.9
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.0980392)
script = ExtResource("3_hqtel")

[node name="InvSlots" type="HBoxContainer" parent="InvBG"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SlotBG0" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG1" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG2" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG3" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG4" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG5" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG6" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG7" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG8" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2

[node name="SlotBG9" parent="InvBG/InvSlots" instance=ExtResource("3_i3pqv")]
layout_mode = 2
